# plumb

./: .gitignore  DECISIONS.md  DEVPOST_SUBMISSION.md  PLUMB_master_spec.md  README.md  SYNC.md  contracts.py  fixtures.py  pyproject.toml
assets/logo/: export.html  gen_logo.py  preview.html
conscience/: __init__.py  agent_loop.py  confirm.py  cortex_client.py  demo.py  rerun_viz.py
conscience/ue5/: __init__.py  adapter.py  bridge.py
conscience/wdf/: __init__.py  grammar.lark  model.py  parse.py  serialize.py
cortex/: __init__.py  orchestrator.py  placement_store.py  repair.py  server.py  world.py
cortex/bake/: __init__.py  cap.py  geometry.py  groups.py  materials.py  physical.py
cortex/bake_profiles/: __init__.py  door.py  shelf.py  tree.py
cortex/gates/: __init__.py  collision.py  constraints.py  reach.py  stability.py
cortex/masks/: __init__.py  banding.py  model.py  registry.py  store.py
cortex/masks/providers/: __init__.py  ai.py  custom.py  geometry.py  hf.py  vultr.py
docs/: gemini-integration-handoff.md  unreal-mcp-integration.md
docs/superpowers/plans/: 2026-05-30-plumb-studio-bake-workbench.md  2026-05-31-plumb-mask-system.md
docs/superpowers/specs/: 2026-05-30-plumb-studio-backend-design.md  2026-05-30-plumb-studio-parallel-handoff.md  2026-05-31-node-editor-empty-canvas-profile-graphs-design.md  2026-05-31-plumb-mask-system-design.md  2026-05-31-plumb-studio-graphite-glass-redesign-design.md  2026-05-31-vultr-masking-design.md
examples/: mansion_gallery.wdf
landing/: index.html
plans/: conscience-plan.md  cortex-plan.md
studio/: README.md  index.html  package-lock.json  package.json  project.py  semantics.py  server.py  tsconfig.app.json  uasset.py  vite.config.ts
studio/public/: landing.html
studio/src/: App.css  App.tsx  AssetsPanel.tsx  Brand.tsx  ConstraintGraph.tsx  DragField.tsx  GateIcon3D.tsx  GateStack.test.tsx  GateStack.tsx  Icons.tsx  Inspector.tsx  LawsBand.tsx  MaskRail.test.tsx  MaskRail.tsx  Menubar.tsx  PlacementTool.tsx  Properties.test.tsx  Properties.tsx  RerunViewer.tsx  SearchSelect.tsx  Splash.test.tsx  Splash.tsx  Stage.tsx  Viewport.tsx  api.ts  index.css  maskRender.ts  masks.ts  recent.ts  theme.css  verdicts.json  verdicts.ts
studio/src/components/: ConstraintGraph.tsx  Inspector.tsx  Palette.tsx
studio/src/lib/: bakeCatalog.ts  catalog.ts  connection.ts  engine.ts  theme.ts  useUndoRedo.ts
tests/: helpers.py  test_adapter.py  test_agent_loop.py  test_bake_profiles.py  test_bridge.py  test_collision.py  test_confirm.py  test_constraints.py  test_demo.py  test_geometry.py  test_integration_bet.py  test_integration_demo.py  test_masks_ai_hf.py  test_masks_api.py  test_masks_geometry.py  test_masks_mcp.py  test_masks_registry.py  test_masks_store.py  test_masks_vultr.py  test_materials.py  test_orchestrator.py  test_physical.py  test_reach.py  test_repair.py  test_rerun_viz.py  test_server.py  test_stability.py  test_studio_server.py  test_vultr_serve.py  test_wdf.py  test_world.py
vultr/: README.md  bootstrap.sh  bootstrap_cpu.sh  requirements.txt  serve.py
