[project]
name = "plumb"
version = "0.1.0"
description = "A spatial cortex and a language for physically-grounded, intent-aware 3D worlds."
requires-python = ">=3.12"   # 3.14 confirmed working incl. CoACD wheels (no 3.12 on build box).
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "trimesh>=4.4",
    "scipy>=1.13",
    "shapely>=2.0",       # robust 2D polygon ops for stability/reach gates
    "coacd",              # convex decomposition (replaces deprecated V-HACD) — confirmed on 3.14
    "manifold3d",         # boolean engine for trimesh (hollow detection / shell fixtures)
    "rerun-sdk>=0.18",
    # add when wiring later backends:
    # "fastmcp",          # MCP server (Task 10)
    # "mujoco",           # ghost-topple animation only (Conscience), never the oracle
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
pythonpath = ["."]          # repo root on sys.path -> `import contracts`, `import cortex...`
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
