[project]
name = "plumb"
version = "0.1.0"
description = "A spatial cortex and a language for physically-grounded, intent-aware 3D worlds."
requires-python = ">=3.12"   # 3.14 confirmed working (no 3.12 on build box).
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "rerun-sdk>=0.18",    # the 3D conscience (viewport, timeline, ViewCoordinates)
    "httpx>=0.27",        # UE5 Remote Control HTTP client
    "lark>=1.1",          # .wdf grammar / parser (full round-trip)
    # cortex-only physics deps live on the `cortex` branch; B never imports them.
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "pytest-httpserver>=1.0"]  # mock UE5 Remote Control server

[tool.pytest.ini_options]
pythonpath = ["."]          # repo root on sys.path -> `import contracts`, `import conscience...`
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
